--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,6 +4,7 @@ page-home {
         background-color: white;
         height: 100%;
         width:100%;
+        padding: 10px;
         }
 
         .toast-success {
